Bug 111534 - [CI][DRMTIP] igt@tools_test@tools_test - fail - Failed assertion: igt_system_quiet("./intel_reg dump") == 0
Summary: [CI][DRMTIP] igt@tools_test@tools_test - fail - Failed assertion: igt_system_...
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: not set not set
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-02 10:24 UTC by Lakshmi
Modified: 2019-09-03 20:05 UTC (History)
3 users (show)

See Also:
i915 platform: BSW/CHT, BYT
i915 features:


Attachments

Description Lakshmi 2019-09-02 10:24:31 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_357/fi-bsw-n3050/igt@tools_test@tools_test.html

Starting subtest: tools_test
(tools_test:1218) CRITICAL: Test assertion failure function __real_main78, file ../tests/tools_test.c:155:
(tools_test:1218) CRITICAL: Failed assertion: igt_system_quiet("./intel_reg dump") == 0
(tools_test:1218) CRITICAL: error: 139 != 0
Subtest tools_test failed.
**** DEBUG ****
(tools_test:1218) DEBUG: Test requirement passed: access("intel_reg", X_OK) == 0
(tools_test:1218) CRITICAL: Test assertion failure function __real_main78, file ../tests/tools_test.c:155:
(tools_test:1218) CRITICAL: Failed assertion: igt_system_quiet("./intel_reg dump") == 0
(tools_test:1218) CRITICAL: error: 139 != 0
(tools_test:1218) igt_core-INFO: Stack trace:
(tools_test:1218) igt_core-INFO:   #0 ../lib/igt_core.c:1674 __igt_fail_assert()
(tools_test:1218) igt_core-INFO:   #1 ../tests/tools_test.c:151 __real_main78()
(tools_test:1218) igt_core-INFO:   #2 [<unknown>+0x0]
(tools_test:1218) igt_core-INFO:   #3 [<unknown>+0xeb999b38]
****  END  ****
Subtest tools_test: FAIL (0.380s)
Comment 1 Lakshmi 2019-09-02 10:26:50 UTC
(In reply to Lakshmi from comment #0)
> https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_357/fi-bsw-n3050/
> igt@tools_test@tools_test.html
> 
> Starting subtest: tools_test
> (tools_test:1218) CRITICAL: Test assertion failure function __real_main78,
> file ../tests/tools_test.c:155:
> (tools_test:1218) CRITICAL: Failed assertion: igt_system_quiet("./intel_reg
> dump") == 0
> (tools_test:1218) CRITICAL: error: 139 != 0
> Subtest tools_test failed.
> **** DEBUG ****
> (tools_test:1218) DEBUG: Test requirement passed: access("intel_reg", X_OK)
> == 0
> (tools_test:1218) CRITICAL: Test assertion failure function __real_main78,
> file ../tests/tools_test.c:155:
> (tools_test:1218) CRITICAL: Failed assertion: igt_system_quiet("./intel_reg
> dump") == 0
> (tools_test:1218) CRITICAL: error: 139 != 0
> (tools_test:1218) igt_core-INFO: Stack trace:
> (tools_test:1218) igt_core-INFO:   #0 ../lib/igt_core.c:1674
> __igt_fail_assert()
> (tools_test:1218) igt_core-INFO:   #1 ../tests/tools_test.c:151
> __real_main78()
> (tools_test:1218) igt_core-INFO:   #2 [<unknown>+0x0]
> (tools_test:1218) igt_core-INFO:   #3 [<unknown>+0xeb999b38]
> ****  END  ****
> Subtest tools_test: FAIL (0.380s)

@Petri/Arek, Is this an IGT issue?
There was a similar issue fixed and closed, Bug 104895?
Comment 3 Arek Hiler 2019-09-02 12:52:49 UTC
This is a regression caused by

commit d38950f2c0ca846816c9b0e6601181cc7e1982de
Author: Daniel Mrzyglod <daniel.t.mrzyglod@intel.com>
Date:   Thu Aug 29 15:10:37 2019 +0200

    lib/intel_mmio: add additional api for multiple devices

    Library  was limited for reading registers for only
    one device at a time in igt tests.
    Changes in this patch give as oportunity to test multiple devices in
    the same time.

    v8: pack and rename structure, remove unnecessary field
    v7: remove unnecessary code
    v6: Reword patch. Cosmetic changes.

    Cc: Antonio Argenziano <antonio.argenziano@intel.com>
    Cc: Daniele Spurio Ceraolo <daniele.ceraolospurio@intel.com>
    Cc: Katarzyna Dec <katarzyna.dec@intel.com>
    Cc: Chris Wilson <chris@chris-wilson.co.uk>
    Cc: Petri Latvala <petri.latvala@intel.com>
    Cc: Zbigniew Kempczyński <zbigniew.kempczynski@intel.com>
    Cc: Jani Nikula <jani.nikula@intel.com>

    Signed-off-by: Daniel Mrzyglod <daniel.t.mrzyglod@intel.com>
    Reviewed-by: Chris Wilson <chris@chris-wilson.co.uk>
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

The hang:

AUD_CONFIG_DEFAULT2_REG_PORTB (0x00180000:0x00062f88): 0x00000000
AUD_CONFIG_DEFAULT2_REG_PORTC (0x00180000:0x00062f8c): 0x00000000
AUD_CONFIG_DEFAULT2_REG_PORTD (0x00180000:0x00062f90): 0x00000000
               AUD_MCTSA (0x00180000:0x00062f94): 0x00000000
               AUD_MCTSB (0x00180000:0x00062f98): 0x00000000
               AUD_MCTSC (0x00180000:0x00062f9c): 0x00000000
Segmentation fault


(gdb) bt
#0  0x00007f8d0e6b6379 in ioread32 (reg=<optimized out>, mmio=<error reading variable: Cannot access memory at address 0x7f8d020d1000>) at ../lib/intel_io.h:77
#1  intel_register_read (mmio_data=0x7f8d020d1000, reg=reg@entry=1581312) at ../lib/intel_mmio.c:266
#2  0x00007f8d0e6c9097 in vlv_sideband_rw (mmio_data=0x7ffc27d20e18, port=<optimized out>, opcode=opcode@entry=6 '\006', addr=32768, val=val@entry=0x7ffc27d20d34) at ../lib/intel_iosf.c:52
#3  0x00007f8d0e6c9355 in intel_iosf_sb_read (mmio_data=<optimized out>, port=<optimized out>, reg=<optimized out>) at ../lib/intel_iosf.c:190
#4  0x0000564ef49c9862 in read_register (config=0x7ffc27d20e10, reg=0x564ef4c317c0, valp=0x7ffc27d20d84) at ../tools/intel_reg.c:391
#5  0x0000564ef49ca0e6 in dump_register (config=0x7ffc27d20e10, reg=0x564ef4c317c0) at ../tools/intel_reg.c:408
#6  0x0000564ef49ca173 in intel_reg_dump (config=0x7ffc27d20e10, argc=<optimized out>, argv=<optimized out>) at ../tools/intel_reg.c:635
#7  0x0000564ef49c8c06 in main (argc=1, argv=0x7ffc27d20fb0) at ../tools/intel_reg.c:1048
Comment 4 Daniel Mrzygłód 2019-09-03 11:47:17 UTC
I will send a fix - Wrong parameters were passed in vlv functions
Comment 5 Daniel Mrzygłód 2019-09-03 12:16:54 UTC
https://patchwork.freedesktop.org/series/66167/
fix was send - waiting for CI results.
Comment 6 Chris Wilson 2019-09-03 20:05:09 UTC
commit 81f7a49bc80e6d9f27e33859fd94fd11e13cafa0 (upstream/master, origin/master, origin/HEAD)
Author: Daniel Mrzyglod <daniel.t.mrzyglod@intel.com>
Date:   Tue Sep 3 14:14:17 2019 +0200

    lib/intel_iosf: Fix bad parameters were passed to functions
    
    There was bad parameters passed to intel_register_read() & intel_register_write()
    and Dereferencing and accessing a non existant structure data member
    resulting SEGFAULT
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=111534
    Fixes: d38950f2c0ca ("lib/intel_mmio: add additional api for multiple devices")
    
    Cc: Arkadiusz Hiler <arkadiusz.hiler@intel.com>
    Cc: Chris Wilson <chris@chris-wilson.co.uk>
    Cc: Lakshminarayana Vudum <lakshminarayana.vudum@intel.com>
    
    Signed-off-by: Daniel Mrzyglod <daniel.t.mrzyglod@intel.com>
    Reviewed-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.