lib/intel_iosf: Fix bad parameters were passed to functions

There was bad parameters passed to intel_register_read() & intel_register_write()
and Dereferencing and accessing a non existant structure data member
resulting SEGFAULT

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=111534
Fixes: d38950f2c0ca ("lib/intel_mmio: add additional api for multiple devices")

Cc: Arkadiusz Hiler <arkadiusz.hiler@intel.com>
Cc: Chris Wilson <chris@chris-wilson.co.uk>
Cc: Lakshminarayana Vudum <lakshminarayana.vudum@intel.com>

Signed-off-by: Daniel Mrzyglod <daniel.t.mrzyglod@intel.com>
Reviewed-by: Chris Wilson <chris@chris-wilson.co.uk>